#
# Copyright (c) 2015-present, Facebook, Inc.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.
#

install(FILES
        com.apple.build-system.core.xcspec
        com.apple.build-system.external.xcspec
        com.apple.build-system.jam.xcspec
        com.apple.build-system.native.xcspec
        com.apple.buildsettings.standard.xcspec
        DESTINATION Library/Xcode/Specifications)
