#
# Copyright (c) 2015-present, Facebook, Inc.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.
#

install(FILES
        archive.ar.xcspec
        archive.asdictionary.xcspec
        archive.binhex.xcspec
        archive.ear.xcspec
        archive.gzip.xcspec
        archive.jar.xcspec
        archive.macbinary.xcspec
        archive.metal-library.xcspec
        archive.ppob.xcspec
        archive.rsrc.xcspec
        archive.stuffit.xcspec
        archive.tar.xcspec
        archive.war.xcspec
        archive.xcspec
        archive.zip.xcspec
        audio.aiff.xcspec
        audio.au.xcspec
        audio.midi.xcspec
        audio.mp3.xcspec
        audio.wav.xcspec
        audio.xcspec
        compiled.air.xcspec
        compiled.cfm.xcspec
        compiled.javaclass.xcspec
        compiled.mach-o.bundle.xcspec
        compiled.mach-o.corefile.xcspec
        compiled.mach-o.dylib.xcspec
        compiled.mach-o.dylinker.xcspec
        compiled.mach-o.executable.xcspec
        compiled.mach-o.fvmlib.xcspec
        compiled.mach-o.objfile.xcspec
        compiled.mach-o.preload.xcspec
        compiled.mach-o.xcspec
        compiled.rcx.xcspec
        compiled.xcspec
        file.bplist.xcspec
        file.playground.xcspec
        file.scp.xcspec
        file.sks.xcspec
        file.storyboard.xcspec
        file.swiftpm-manifest.xcspec
        file.uicatalog.xcspec
        file.xcplaygroundpage.xcspec
        file.xcspec
        file.xib.xcspec
        folder.abstractassetcatalog.xcspec
        folder.assetcatalog.xcspec
        folder.iconset.xcspec
        folder.imagecatalog.xcspec
        folder.skatlas.xcspec
        folder.stickers.xcspec
        folder.xcspec
        image.bmp.xcspec
        image.gif.xcspec
        image.icns.xcspec
        image.ico.xcspec
        image.jpeg.xcspec
        image.pdf.xcspec
        image.pict.xcspec
        image.png.xcspec
        image.tiff.xcspec
        image.xcspec
        net.daringfireball.markdown.xcspec
        sourcecode.ada.xcspec
        sourcecode.applescript.xcspec
        sourcecode.asm.asm.xcspec
        sourcecode.asm.llvm.xcspec
        sourcecode.asm.xcspec
        sourcecode.c.c.preprocessed.xcspec
        sourcecode.c.c.xcspec
        sourcecode.c.h.xcspec
        sourcecode.c.objc.preprocessed.xcspec
        sourcecode.c.objc.xcspec
        sourcecode.c.xcspec
        sourcecode.cpp.cpp.preprocessed.xcspec
        sourcecode.cpp.cpp.xcspec
        sourcecode.cpp.h.xcspec
        sourcecode.cpp.objcpp.preprocessed.xcspec
        sourcecode.cpp.objcpp.xcspec
        sourcecode.cpp.xcspec
        sourcecode.dtrace.xcspec
        sourcecode.dylan.xcspec
        sourcecode.exports.xcspec
        sourcecode.fortran.f77.xcspec
        sourcecode.fortran.f90.xcspec
        sourcecode.fortran.xcspec
        sourcecode.glsl.xcspec
        sourcecode.jam.xcspec
        sourcecode.java.xcspec
        sourcecode.javascript.xcspec
        sourcecode.lex.xcspec
        sourcecode.make.xcspec
        sourcecode.metal.xcspec
        sourcecode.mig.xcspec
        sourcecode.module-map.xcspec
        sourcecode.nasm.xcspec
        sourcecode.nqc.xcspec
        sourcecode.opencl.xcspec
        sourcecode.pascal.xcspec
        sourcecode.rez.xcspec
        sourcecode.swift.xcspec
        sourcecode.text-based-dylib-definition.xcspec
        sourcecode.xcspec
        sourcecode.yacc.xcspec
        text.css.xcspec
        text.html.documentation.xcspec
        text.html.other.xcspec
        text.html.xcspec
        text.json.xcspec
        text.man.xcspec
        text.pbxproject.xcspec
        text.plist.ibClassDescription.xcspec
        text.plist.info.xcspec
        text.plist.pbfilespec.xcspec
        text.plist.pblangspec.xcspec
        text.plist.scriptSuite.xcspec
        text.plist.scriptTerminology.xcspec
        text.plist.strings.xcspec
        text.plist.stringsdict.xcspec
        text.plist.xcbuildrules.xcspec
        text.plist.xclangspec.xcspec
        text.plist.xcspec
        text.plist.xcspec.xcspec
        text.plist.xcsynspec.xcspec
        text.plist.xctxtmacro.xcspec
        text.plist.xml.xcspec
        text.rtf.xcspec
        text.script.csh.xcspec
        text.script.perl.xcspec
        text.script.php.xcspec
        text.script.python.xcspec
        text.script.ruby.xcspec
        text.script.sh.xcspec
        text.script.worksheet.xcspec
        text.script.xcspec
        text.xcconfig.xcspec
        text.xcspec
        text.xml.dae.xcspec
        text.xml.ibArchivingDescription.xcspec
        text.xml.ibCodingDescription.xcspec
        text.xml.xcspec
        video.avi.xcspec
        video.mpeg.xcspec
        video.quartz-composer.xcspec
        video.quicktime.xcspec
        video.xcspec
        wrapper.app-extension.xcspec
        wrapper.application.xcspec
        wrapper.cfbundle.xcspec
        wrapper.dsym.xcspec
        wrapper.framework.static.xcspec
        wrapper.framework.xcspec
        wrapper.htmld.xcspec
        wrapper.installer-mpkg.xcspec
        wrapper.installer-pkg.xcspec
        wrapper.java-classfolder.xcspec
        wrapper.kernel-extension.xcspec
        wrapper.nib.xcspec
        wrapper.pb-project.xcspec
        wrapper.pb-target.xcspec
        wrapper.plug-in.xcspec
        wrapper.rtfd.xcspec
        wrapper.scnassets.xcspec
        wrapper.spotlight-importer.xcspec
        wrapper.storyboardc.xcspec
        wrapper.workspace.xcspec
        wrapper.xcclassmodel.xcspec
        wrapper.xcdatamodel.xcspec
        wrapper.xcdatamodeld.xcspec
        wrapper.xcmappingmodel.xcspec
        wrapper.xcspec
        wrapper.xpc-service.xcspec
        DESTINATION Library/Xcode/Specifications)
